[gd_scene load_steps=2 format=3 uid="uid://c5action_sequence_editor"]

[ext_resource type="Script" path="res://scripts/ui/ActionSequenceEditor.gd" id="1_script"]

[node name="ActionSequenceEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 550)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderRow" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FormNameEdit" type="LineEdit" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Form Name"

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer/HeaderRow"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "X"

[node name="SlotsSection" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SlotsLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer/SlotsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Action Sequence"

[node name="SlotsContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer/SlotsSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer"]
layout_mode = 2

[node name="AvailableLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Available Actions"

[node name="AvailableScroll" type="ScrollContainer" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableGrid" type="GridContainer" parent="CenterContainer/Panel/VBoxContainer/ContentMargin/VBoxContainer/AvailableScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonBar" type="MarginContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ButtonBar"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 10

[node name="CancelButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonBar/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonBar/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Save"

[node name="UnsavedDialog" type="ConfirmationDialog" parent="."]
title = "Unsaved Changes"
initial_position = 2
size = Vector2i(350, 100)
dialog_text = "You have unsaved changes. Save before closing?"
ok_button_text = "Save"
cancel_button_text = "Discard"
